fix: Add Pagination of 25 programs per actions page - MEED-7172 - Meeds-io/meeds#2253
This PR will implement a Pagination of 25 programs per actions page to enhance performance